--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="./1-timer.html" class="nav-link">Task 1</a>
+        </li>
+        <li class="nav-item">
+          <a href="./2-snackbar.html" class="nav-link">Task 2</a>
+        </li>
+      </ul>
+    </nav>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
