--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section>
-      <a href="./index.html">Go to home</a>
+      <a href="./index.html" class="nav-link">Go to home</a>
       <div class="form-container">
         <div class="input-container">
           <input type="text" id="datetime-picker" />
